redifood/templates/development/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: { { .Values.devDomain } }
      http:
        paths:
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: { { .Values.backendSrv } }
                port:
                  number: { { .Values.backendPort } }
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: { { .Values.clientSrv } }
                port:
                  number: { { .Values.clientPort } }
